--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
   "functions": {
     "api/*.py": {
-      "runtime": "python3.9"
+      "runtime": "@vercel/python@4.0.0"
     }
   },
-
   "rewrites": [
     {
       "source": "/youtube",
